Gif fix and moved to top on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -701,8 +701,7 @@ h1, h2, h3, h4, h5 {
   .heroImagesContainer--mobile {
     display: none;
     max-width: 500px;
-    margin-top: 35px;
-    margin-bottom: 30px; }
+    margin: 30px 0px; }
     .heroImagesContainer--mobile .section_content_imageContainer_img {
       max-width: 100% !important; }
 
